Bring project up to date
- Clean up Maven project
  - Make it work with the latest version of Maven
  - Best POM practices
  - Extract common parts of assembly descriptors
- Update to latest oxt-maven-plugin
- Delete macosx_x86 build because Mac OS is dropping 32-bit support
- Update to latest versions of dependencies (including liblouis and
  liblouisutdml). The most significant changes are:
  - Hyphenation does not rely on back-translation anymore.
  - Soft hyphens work differently.
  - Box lines work a bit differently.
  - centeredMargin has been replaced with a combination of leftMargin
    and rightMargin.
  - The liblouis table format changed slightly.
  - Needed to partly revert revision 186 which depends on an unknown
    branch of braille-utils.
- Get liblouis/liblouisutdml files from NAR and delete as much
  liblouis related files as possible from the odt2brailles source
  code.
- Select liblouis tables based on table metadata
- Get Windows binaries from NAR
- Delete unused files
- Add a Makefile
- Add submodules to get rid of external snapshot dependencies
  - oxt-maven-plugin
  - l10n-maven-plugin
  - nar-maven-plugin
  - liblouis
  - liblouisutdml
  - accessodf